--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 
     <footer>
         <div class="social-links">
-            <a href="https://github.com"><i class="fab fa-github"></i></a>
-            <a href="https://linkedin.com"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/fthkrtl"><i class="fab fa-github"></i></a>
+            <a href="https://linkedin.com/in/fthkrtl"><i class="fab fa-linkedin"></i></a>
         </div>
         <p>&copy; 2026 Fatih KARTAL. Tüm hakları saklıdır.</p>
     </footer>
